# ndex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  RELEASING.md  SECURITY.md  deny.toml  hk.pkl  mise.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.github/workflows/: ci.yml
crates/ndex/: Cargo.toml
crates/ndex-core/: Cargo.toml
crates/ndex-core/src/: config.rs  constants.rs  error.rs  filters.rs  identity.rs  lib.rs  model.rs  path.rs  progress.rs  status.rs  tokens.rs
crates/ndex-core/tests/: characterization.rs
crates/ndex-embed/: Cargo.toml
crates/ndex-embed/src/: embedder.rs  lib.rs  model.rs  tokenizer.rs
crates/ndex-embed/tests/: characterization.rs
crates/ndex-extract/: Cargo.toml
crates/ndex-extract/src/: archive_safety.rs  chunk.rs  encoding.rs  extractor.rs  lang.rs  lib.rs  mime.rs
crates/ndex-extract/src/formats/: archive.rs  code.rs  docx.rs  html.rs  image.rs  markdown.rs  mod.rs  pdf.rs  text.rs
crates/ndex-extract/tests/: characterization.rs
crates/ndex-protocol/: Cargo.toml
crates/ndex-protocol/src/: codec.rs  frame.rs  handshake.rs  lib.rs  message.rs
crates/ndex-protocol/tests/: characterization.rs
crates/ndex-reconcile/: Cargo.toml
crates/ndex-reconcile/benches/: reconcile.rs
crates/ndex-reconcile/src/: diff.rs  lib.rs  process.rs  reconciler.rs  recover.rs  refresh.rs  walk.rs
crates/ndex-reconcile/tests/: characterization.rs
crates/ndex-remote/: Cargo.toml
crates/ndex-remote/src/: cli.rs  lib.rs  main.rs  map.rs  progress.rs  serve.rs
crates/ndex-remote/src/commands/: completions.rs  indexing.rs  maintain.rs  mod.rs  model.rs  read.rs
crates/ndex-remote/tests/: characterization.rs  cli.rs  crash.rs  integration.rs
crates/ndex-search/: Cargo.toml
crates/ndex-search/src/: fuse.rs  lib.rs  mode.rs  query.rs  search.rs
crates/ndex-search/tests/: characterization.rs
crates/ndex-store/: Cargo.toml
crates/ndex-store/src/: fts.rs  identity.rs  lib.rs  lock.rs  manifest.rs  meta.rs  vector.rs
crates/ndex-store/tests/: characterization.rs
crates/ndex/src/: args.rs  commands.rs  hosts.rs  lib.rs  main.rs  session.rs  transport.rs
crates/ndex/src/render/: format.rs  mod.rs
crates/ndex/tests/: characterization.rs  cli.rs
docs/: END_TO_END.md
scripts/: install.sh
specs/: 00-architecture.md  80-testing.md  README.md
specs/10-core/: 11-data-model.md  12-paths.md  13-config.md  14-errors.md  15-search-and-progress-types.md
specs/20-store/: 21-layout-and-locking.md  22-manifest.md  23-fts.md  24-vectors.md
specs/30-ingest/: 31-reconcile.md  32-extraction.md  33-chunking.md  34-embedding.md
specs/40-search/: 41-search.md
specs/50-protocol/: 51-framing.md  52-handshake.md  53-messages.md
specs/60-interfaces/: 61-client-cli.md  62-client-transport.md  63-remote.md
specs/70-operations/: 71-toolchain.md  72-ci.md  73-release.md
tests/fixtures/: FIXTURES.md
tests/fixtures/edge/: .ndexignore
tests/fixtures/text/: doc.md  hello.txt
