[package]
name = "ndex-core"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ndex foundation: shared types, errors, config, paths, progress"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
jiff.workspace = true
half.workspace = true
blake3.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
insta.workspace = true
rmp-serde.workspace = true
rstest.workspace = true
tempfile.workspace = true
