[package]
name = "ndex-reconcile"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ndex reconciliation engine: parallel walk, metadata diff, extract pipeline"

[lints]
workspace = true

[dependencies]
ndex-core.workspace = true
ndex-store.workspace = true
ndex-extract.workspace = true
ndex-embed.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
ignore.workspace = true
memmap2.workspace = true
rustix.workspace = true
blake3.workspace = true
jiff.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "reconcile"
harness = false
