[package]
name = "ndex-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ndex fat server: msgpack serve loop, standalone CLI, command handlers"

[lints]
workspace = true

[dependencies]
ndex-core.workspace = true
ndex-protocol.workspace = true
ndex-store.workspace = true
ndex-extract.workspace = true
ndex-embed.workspace = true
ndex-search.workspace = true
ndex-reconcile.workspace = true
clap.workspace = true
clap_complete.workspace = true
rmp-serde.workspace = true
serde.workspace = true
jiff.workspace = true
rustix.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
