[package]
name = "ndex-store"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ndex index engines: SQLite manifest/meta, tantivy FTS, usearch vectors"

[lints]
workspace = true

[dependencies]
ndex-core.workspace = true
rusqlite.workspace = true
tantivy.workspace = true
usearch.workspace = true
rustix.workspace = true
memmap2.workspace = true
half.workspace = true
blake3.workspace = true
jiff.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
