[package]
name = "ndex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ndex thin client: SSH/subprocess transport and terminal rendering"

# Architectural invariant: this crate depends ONLY on ndex-core and ndex-protocol.
# It must never reference an engine crate (store/extract/embed/search/reconcile).
[lints]
workspace = true

[dependencies]
ndex-core.workspace = true
ndex-protocol.workspace = true
clap.workspace = true
clap_complete.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
indicatif.workspace = true
supports-color.workspace = true
supports-hyperlinks.workspace = true
terminal_size.workspace = true
anstream.workspace = true
anstyle.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
